<resources>
    <string name="from_gallery">From Gallery..</string>
    <string name="about_menu">About</string>
    <string name="exit_menu">Exit</string>
    <string name="list_breeds">Supported Breeds</string>
    <string name="change_language">Change language</string>
</resources>